--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,16 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+DISCORD_CLIENT_ID=your_discord_client_id
+DISCORD_CLIENT_SECRET=your_discord_client_secret
+DISCORD_REDIRECT_URI="${APP_URL}/auth/discord/callback"
+DISCORD_GIF_AVATARS=true
+DISCORD_DEFAULT_EXTENSION=png
+
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_REDIRECT_URI="${APP_URL}/auth/github/callback"
+
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
