--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/commonmark": "^2.6",
         "socialiteproviders/discord": "^4.2",
         "socialiteproviders/github": "^4.1",
+        "spatie/yaml-front-matter": "^2.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
