--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@iconify/react": "^5.2.0",
         "@inertiajs/react": "^2.0.3",
         "@tailwindcss/postcss": "^4.0.8",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.8",
         "@typescript-eslint/eslint-plugin": "^8.24.1",
         "@typescript-eslint/parser": "^8.24.1",
@@ -37,6 +38,7 @@
     "dependencies": {
         "framer-motion": "^12.4.7",
         "md5": "^2.3.0",
+        "prismjs": "^1.29.0",
         "use-debounce": "^10.0.4"
     }
 }
