--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
         "framer-motion": "^12.4.7",
         "md5": "^2.3.0",
         "use-debounce": "^10.0.4"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
+        ]
     }
 }
